syntax = "proto3";

package rate;


service RateService {
    rpc GetGrowthRecords(GetRequest) returns (Response) {}
}

message Rate {
    int32 id = 1;
    string market_name = 2;
    float high = 3;
    float low = 4;
    float volume = 5;
    string timestamp = 6;
}

message GrowthRecord {
    int32 id = 1;
    int32 from_rate_id = 2;
    int32 to_rate_id = 3;
    float volume_growth = 4;
    float high_growth = 5;
    float low_growth = 6;
    int64 from = 7;
    int64 to = 8;
    Rate from_rate = 9;
    Rate to_rate = 10;
}

// Created a blank get request
message GetRequest {
    int64 from_timestamp = 1;
    int64 to_timestamp = 2;
}

message Response {
    repeated GrowthRecord growth_records = 1;
    repeated ResponseData data = 2;
}

message ResponseData {
    string from = 1;
    string to = 2;
    repeated ResponseMarketData market_data= 3;
}
    
message ResponseMarketData {
    string market_pair = 1;
    GrowthData growth_data = 2;
}

message GrowthData {
    float volume_growth = 1;
    float high_growth = 2;
    float low_growth = 3;
}
